# hindsight-cn

./: .env.example  .gitignore  .sesskey  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  HINDSIGHT_PAPER.md  NEW.md  PAPER_PERSONALITY.md  PAPER_RETRIEVAL.md  README.md  RELEASE.md  docker-compose.yml  generate_openapi.py  hindsight.env.example  openapi.json  package-lock.json  package.json  pyproject.toml
hindsight-dev/: pyproject.toml
hindsight-dev/benchmarks/: README.md  pyproject.toml
hindsight-dev/benchmarks/common/: benchmark_runner.py
hindsight-dev/benchmarks/consolidation/: consolidation_benchmark.py
hindsight-dev/benchmarks/locomo/: locomo_benchmark.py
hindsight-dev/benchmarks/locomo/results/: results_table.md  results_table_think.md
hindsight-dev/benchmarks/longmemeval/: longmemeval_benchmark.py
hindsight-dev/benchmarks/longmemeval/results/: benchmark_results.json
hindsight-dev/benchmarks/perf/: recall_perf.py  retain_perf.py  system_perf.py
hindsight-dev/benchmarks/visualizer/: main.py
hindsight-dev/hindsight_dev/: generate_changelog.py  generate_openapi.py  sync_cookbook.py
hindsight-dev/upgrade_tests/: conftest.py  version_runner.py
hindsight-embed/: README.md  pyproject.toml  test.sh
hindsight-embed/hindsight_embed/: __init__.py  cli.py  daemon_client.py  daemon_embed_manager.py  profile_manager.py
hindsight-embed/tests/: test_daemon_client.py  test_embed_manager.py  test_profile_daemon_config.py  test_profile_integration.py  test_profile_manager.py
hindsight-integrations/hermes/: README.md  pyproject.toml
hindsight-integrations/hermes/hindsight_hermes/: __init__.py  config.py  errors.py  tools.py
hindsight-integrations/hermes/tests/: test_config.py  test_tools.py
hindsight-integrations/langmem/: pyproject.toml  tutorial.ipynb
hindsight-integrations/langmem/hindsight_langmem/: __init__.py  store.py
hindsight-integrations/langmem/tests/: __init__.py  test_store.py
hindsight-integrations/openai/: README.md  pyproject.toml  tutorial.ipynb
hindsight-integrations/openai/hindsight_openai/: __init__.py  client.py  config.py  interceptor.py
hindsight-integrations/openai/tests/: test_client.py
memora/: README.md  alembic.ini  api.py  entity_resolver.py  fact_extraction.py  fix_background.py  llm_wrapper.py  pyproject.toml  remote_client.py  search_tracer.py  task_backend.py  temporal_semantic_memory.py  utils.py
memora-cli/: Cargo.toml  README.md  build.sh  install.sh  pyproject.toml
memora-cli/memora_cli/: __init__.py  main.py
memora-cli/src/: api.rs  config.rs  errors.rs  main.rs  main.rs.bak11  main.rs.bak3  main.rs.bak4  output.rs  ui.rs
memora-clients/python/: README.md  __init__.py  openapi-generator-config.yaml  pyproject.toml
memora-clients/python/.openapi-generator/: FILES
memora-clients/python/agent_memory_api_client/models/: __init__.py  add_background_request.py  agent_list_item.py  agent_list_response.py  batch_put_async_response.py  create_agent_request.py  graph_data_response.py  graph_data_response_edges_item.py  (+10 more)
memora-clients/python/memora_client/: __init__.py  memora_client.py
memora-clients/python/memora_client_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
memora-clients/python/models/: __init__.py  agent_profile_response.py  agents_response.py  background_response.py  batch_put_request.py  batch_put_response.py  document_response.py  list_documents_response_items_item.py  memory_item.py  personality_traits.py  search_request.py  search_response.py  think_fact.py  think_request.py
memora-clients/python/tests/: test_main_operations.py
memora-dev/: pyproject.toml
memora-dev/benchmarks/: pyproject.toml
memora-dev/benchmarks/common/: benchmark_runner.py
memora-dev/benchmarks/locomo/: locomo_benchmark.py
memora-dev/benchmarks/longmemeval/: longmemeval_benchmark.py
memora-dev/benchmarks/visualizer/: main.py
memora-dev/memora_dev/: __init__.py  generate_openapi.py
memora-langmem/: pyproject.toml  tutorial.ipynb
memora-langmem/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
memora-langmem/memora_langmem/: __init__.py  store.py
memora-langmem/tests/: __init__.py  test_store.py
memora-mcp-server/: README.md  __init__.py  client.py  config.py  pyproject.toml  server.py
memora-openai/: README.md  pyproject.toml  tutorial.ipynb
memora-openai/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
memora-openai/memora_openai/: __init__.py  client.py  config.py  interceptor.py
memora-openai/src/memora_openai/: client.py  config.py  interceptor.py
memora-openai/tests/: test_client.py
memora/alembic/: env.py
memora/alembic/versions/: 01f989db9079_fix_memory_links_entity_id_to_be_.py  1a35a4fa1950_add_bm25_fulltext_search.py  3b9c4d8e7f21_add_name_to_agents.py  4a8b3c5d6e7f_add_metadata_to_memory_units.py  8c55f5602451_remove_entity_type_column.py  9d42e6f91234_add_temporal_ranges_to_memory_units.py  af0413383b3e_initial_schema.py
memora/memora/: __init__.py  api.py  entity_resolver.py  fact_extraction.py  llm_wrapper.py  migrations.py  models.py  query_analyzer.py  remote_client.py  response_models.py  search_trace.py  task_backend.py  temporal_semantic_memory.py  utils.py
memora/memora/api/: __init__.py  http.py  mcp.py
memora/memora/operations/: __init__.py  agent_operations.py  batch_operations.py  embedding_operations.py  link_operations.py  think_operations.py
memora/memora/search/: __init__.py  reranking.py  retrieval.py  temporal_extraction.py
memora/memora/web/: __init__.py  server.py
memora/operations/: think_operations.py
memora/search/: __init__.py  mmr.py  reranking.py  retrieval.py
memora/tests/: conftest.py  test_agent_profile.py  test_agent_put_endpoint.py  test_api_integration.py  test_batch_chunking.py  test_dimension_extraction.py  test_fact_classification.py  test_fact_ordering.py  test_personality_inference.py  test_query_analyzer.py  test_search_trace.py  test_temporal_ranges.py  test_think.py
memora/tests/mcp_server/: test_server.py
memora/web/: __init__.py  server.py
memora/web/templates/: index.html
(+2264 files in other folders)
