[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hindsight-dev"
version = "0.0.8"
description = "Development utilities for Hindsight"
requires-python = ">=3.11"
dependencies = [
    "hindsight-api",
]

[tool.hatch.build.targets.wheel]
packages = ["hindsight_dev"]

[tool.uv.sources]
hindsight-api = { workspace = true }

[project.scripts]
generate-openapi = "hindsight_dev.generate_openapi:generate_openapi_spec"
