[package]
name = "memora-cli-rust"
version = "0.0.1"
edition = "2021"
authors = ["Memora Team"]
description = "A beautiful CLI for Memora - semantic memory system"
license = "MIT"

[[bin]]
name = "memora"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# TUI libraries
ratatui = "0.29"
crossterm = "0.28"

# Colors and styling
colored = "2.1"
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
walkdir = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
