[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memora-cli"
version = "0.1.0"
description = "Modern CLI for Memora - Temporal Semantic Memory System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.20.0",
    "httpx>=0.27.0",
]

[project.scripts]
memora = "memora_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["memora_cli"]
