[project]
name = "memora-mcp-server"
version = "0.0.1"
description = "Remote MCP server for Memora memory system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.7.0",
    "httpx>=0.28.1",
]

[project.scripts]
memora-mcp-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
