[project]
name = "memora-openai"
version = "0.1.0"
description = "Drop-in replacement for OpenAI client with automatic Memora integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "memora-client",
]

[tool.uv.sources]
memora-client = { path = "../memora-clients/python", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memora_openai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
