[project]
name = "hindsight-hermes"
version = "0.1.0"
description = "Hermes agent integration for Hindsight - persistent memory tools for AI agents"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vectorize", email = "support@vectorize.io" }
]
keywords = [
    "ai",
    "memory",
    "hermes",
    "agents",
    "hindsight",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "hindsight-client>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.entry-points."hermes_agent.plugins"]
hindsight = "hindsight_hermes"

[project.urls]
Homepage = "https://github.com/vectorize-io/hindsight"
Documentation = "https://github.com/vectorize-io/hindsight/tree/main/hindsight-integrations/hermes"
Repository = "https://github.com/vectorize-io/hindsight"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hindsight_hermes"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
