[project]
name = "hindsight-hermes"
version = "0.4.19"
description = "Hermes agent integration for Hindsight - persistent memory tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vectorize", email = "support@vectorize.io" }
]
keywords = [
    "ai",
    "memory",
    "hermes",
    "agents",
    "hindsight",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "hindsight-client>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.entry-points."hermes_agent.plugins"]
hindsight = "hindsight_hermes"

[project.urls]
Homepage = "https://github.com/vectorize-io/hindsight"
Documentation = "https://github.com/vectorize-io/hindsight/tree/main/hindsight-integrations/hermes"
Repository = "https://github.com/vectorize-io/hindsight"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hindsight_hermes"]

[tool.uv.sources]
# hermes-agent 0.5.0 is not on PyPI yet; pin to the release tag
hermes-agent = { git = "https://github.com/NousResearch/hermes-agent.git", tag = "v2026.3.28" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "hermes-agent>=0.5.0 ; python_version >= '3.11'",
]
