[project]
name = "memora-client"
version = "0.0.7"
description = "Python client for Memora - Semantic memory system with personality-driven thinking"
authors = [
    {name = "Memora Team"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "aiohttp (>=3.8.4)",
  "aiohttp-retry (>=2.8.3)",
  "pydantic (>=2)",
  "typing-extensions (>=4.7.1)",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memora_client", "memora_client_api"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
